--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simple voting app on Solana. Built with Anchor and React."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -36,6 +36,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <p style="display: none !important">
+      Icons made by
+      <a href="https://www.freepik.com"> Freepik </a>
+      <a href="https://www.flaticon.com/"> www.flaticon.com </a>
+    </p>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
